# john_reed_server_rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
data/: dump.rdb
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/model/: model.rs  proto_model.proto
src/: main.rs
