[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Auryn Engel <auryn.engel@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
redis = "0.16.0"
chrono = "0.4.11"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }