[package]
name = "john-reed-server"
version = "0.1.0"
authors = ["Auryn Engel <auryn.engel@sap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.1.1"
redis = "0.17.0"
chrono = "0.4.15"
reqwest = { version = "0.10.7", features = ["blocking"] }
anyhow = "1.0.32"
env_logger = "0.7.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio ="0.2.22"
prost = "0.6"
bytes =  "0.5.6"
actix-protobuf = "0.5.1"

[build-dependencies]
prost-build = "0.6.1"